--- a/src/partials/modal_students.html
+++ b/src/partials/modal_students.html
@@ -1,8 +1,7 @@
-
 <div class="team__backdrop js-team-backdrop">
   <div class="team__modal">
     <h2 class="team__title">
-      <span class="team__text">United_Juniors</span><span class="team__text"> Team</span>
+      <span class="team__text">United_Juniors</span>
     </h2>
     <button
       type="button"
@@ -12,148 +11,6 @@
       <span class="glowing__txt">C<span class="faulty-letter">L</span>OSE</span>
     </button>
 
-      <ul class="gallery__team">
-
-      </ul>
-
-
-    <!-- <div class="card-wrapper">      
-       <div class="main-container">
-        <div class="card-container">
-          <a href="#"
-            ><img
-              src="/src/images/team/Kuts Mykola.jpeg"
-              class="team__card"
-              width="230"
-              height="340"
-          /></a>
-        </div>
-        <div class="team__info">
-          <div class="team__content">
-            <h3 class="team__name">Анна Крисенко</h3>
-            <p class="team__position">Team-lead/Developer</p>
-          </div>
-        </div>
-      </div>
-      <div class="main-container">
-        <div class="card-container">
-          <a href="#"
-            ><img
-              src="/src/images/team/Kuts Mykola.jpeg"
-              class="team__card"
-              width="230"
-              height="340"
-          /></a>
-        </div>
-        <div class="team__info">
-          <div class="team__content">
-            <h3 class="team__name">Анна Денисова</h3>
-            <p class="team__position">Developer</p>
-          </div>
-        </div>
-      </div>
-      <div class="main-container">
-        <div class="card-container">
-          <a href="#"
-            ><img
-              src="/src/images/team/Kuts Mykola.jpeg"
-              class="team__card"
-              width="230"
-              height="340"
-          /></a>
-        </div>
-        <div class="team__info">
-          <div class="team__content">
-            <h3 class="team__name">Сергій Соловйов</h3>
-            <p class="team__position">Developer</p>
-          </div>
-        </div>
-      </div>
-      <div class="main-container">
-        <div class="card-container">
-          <a href="#"
-            ><img
-              src="/src/images/team/Kuts Mykola.jpeg"
-              class="team__card"
-              width="230"
-              height="340"
-          /></a>
-        </div>
-        <div class="team__info">
-          <div class="team__content">
-            <h3 class="team__name">Сергій Казакевич</h3>
-            <p class="team__position">Developer</p>
-          </div>
-        </div>
-      </div>
-      <div class="main-container">
-        <div class="card-container">
-          <a href="#"
-            ><img
-              src="/src/images/team/Kuts Mykola.jpeg"
-              class="team__card"
-              width="230"
-              height="340"
-          /></a>
-        </div>
-        <div class="team__info">
-          <div class="team__content">
-            <h3 class="team__name">Максим Коворотний</h3>
-            <p class="team__position">Developer</p>
-          </div>
-        </div>
-      </div>
-      <div class="main-container">
-        <div class="card-container">
-          <a href="#"
-            ><img
-              src="/src/images/team/Kuts Mykola.jpeg"
-              class="team__card"
-              width="230"
-              height="340"
-          /></a>
-        </div>
-        <div class="team__info">
-          <div class="team__content">
-            <h3 class="team__name">Василь Теглівець</h3>
-            <p class="team__position">Developer</p>
-          </div>
-        </div>
-      </div>
-      <div class="main-container">
-        <div class="card-container">
-          <a href="#"
-            ><img
-              src="/src/images/team/Kuts Mykola.jpeg"
-              class="team__card"
-              width="230"
-              height="340"
-          /></a>
-        </div>
-        <div class="team__info">
-          <div class="team__content">
-            <h3 class="team__name">Андрій Єщенко</h3>
-            <p class="team__position">Developer</p>
-          </div>
-        </div>
-      </div>
-      <div class="main-container">
-        <div class="card-container">
-          <a href="#"
-            ><img
-              src="/src/images/team/Kuts Mykola.jpeg"
-              class="team__card"
-              width="230"
-              height="340"
-          /></a>
-        </div>
-        <div class="team__info">
-          <div class="team__content">
-            <h3 class="team__name">Олександр Соловйов</h3>
-            <p class="team__position">Scrum-master/Developer</p>
-          </div>
-        </div>
-      </div> 
-    </div> -->
+    <ul class="gallery__team"></ul>
   </div>
-</div> 
+</div>
