--- a/src/sass/_modal_students.scss
+++ b/src/sass/_modal_students.scss
@@ -1,15 +1,11 @@
-
 body.show-modal .team__backdrop {
   opacity: 1;
   visibility: visible;
   pointer-events: initial;
-  // transform: scale(1);
 }
 
 body.show-modal .team__modal {
   transform: scale(1);
-  // transform: scale(0.000001);
-  // transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 body.show-modal {
@@ -31,7 +27,7 @@ body.show-modal {
   pointer-events: none;
   opacity: 0;
   visibility: hidden;
-  
+
   &.team__modal {
     transform: scale(0.0001);
     transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -53,14 +49,16 @@ body.show-modal {
   overflow-x: hidden;
   background-color: #fff;
 
-
-
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-  url(/src/images/team/team_bg_img.jpg);
+  background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(/src/images/team/team_bg_img.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-color:$white-color;
+  background-color: $white-color;
 
   box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
     0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
@@ -76,7 +74,6 @@ body.show-modal {
     max-width: 1000px;
     max-height: 650px;
   }
-
 }
 
 .team__title {
@@ -133,9 +130,8 @@ body.show-modal {
   display: flex;
 
   @media screen and (min-width: $desk) {
-
-    width: calc((100% - 30px) / 1);   
- }
+    width: calc((100% - 30px) / 1);
+  }
 }
 
 .dev__item {
@@ -197,7 +193,7 @@ body.show-modal {
 .dev__info {
   width: 250px;
   height: 350px;
-  opacity: 0; 
+  opacity: 0;
   background: transparent;
   border-radius: 10px;
   flex-direction: column;
@@ -231,7 +227,6 @@ body.show-modal {
   line-height: calc(18.75 / 16);
   margin-bottom: 20px;
 }
-
 
 .glowing__btn {
   position: absolute;
@@ -411,4 +406,3 @@ body.show-modal {
   border-radius: 5px;
   border: 1px solid #545454;
 }
-
