--- a/src/sass/_cards.scss
+++ b/src/sass/_cards.scss
@@ -13,6 +13,22 @@
     gap: 16px;
   }
 }
+.library__container {
+    list-style-type: none;
+    @media screen and (min-width: 768px) {
+            // width: 768px;
+            display: flex;
+            flex-wrap: wrap;
+            gap: 32px;
+        }
+    
+        @media screen and (min-width: 1280px) {
+            display: flex;
+            flex-wrap: wrap;
+            width: 1280px;
+            gap: 16px;
+        }
+}
 .card {
   // margin-left: auto;
   // margin-right: auto;
@@ -95,6 +111,6 @@
 }
 
 .card__genres {
-  border-right: 1px solid #b92f2c;
+  border-right: 2px solid #b92f2c;
   margin-right: 3px;
 }
