--- a/src/sass/_cards.scss
+++ b/src/sass/_cards.scss
@@ -14,25 +14,24 @@
   }
 }
 .library__container {
-    list-style-type: none;
-    @media screen and (min-width: 768px) {
-            // width: 768px;
-            display: flex;
-            flex-wrap: wrap;
-            gap: 32px;
-        }
-    
-        @media screen and (min-width: 1280px) {
-            display: flex;
-            flex-wrap: wrap;
-            width: 1280px;
-            gap: 16px;
-        }
+  list-style-type: none;
+  @media screen and (min-width: 768px) {
+    // width: 768px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 32px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    display: flex;
+    flex-wrap: wrap;
+    width: 1280px;
+    gap: 16px;
+  }
 }
 .card {
-  // margin-left: auto;
-  // margin-right: auto;
-  width: 280px;
+  margin: 0 auto;
+  width: auto;
 
   @media screen and (max-width: 767px) {
     &:not(:last-child) {
