--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -14,7 +14,7 @@
     z-index: 20;
      transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    
+     overflow:  hidden;
   &.is-hidden {
         opacity: 0;
         pointer-events: none;
@@ -34,6 +34,7 @@ transform: scale(0.2);
   //  max-width: 280px;
   padding: 40px 15px;
   position: absolute;
+  overflow: scroll;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
@@ -247,33 +248,3 @@ button {
   }
 }
 
-
-<<<<<<< Updated upstream
-// .backdrop-about {
-//     position: absolute;
-//     top: 0;
-//     left: 0;
-//     width: 100%;
-//     height: 100%;
-//     background-color: rgba(0, 0, 0, .2);
-//     z-index: 20;
-//     transition: .3s all;
-
-//     // transition: opacity 250ms linear,
-//     //     visibility 250ms linear;
-
-//   &.is-hidden {
-//         opacity: 0;
-//         pointer-events: none;
-
-//     }
-// }
-
-// .movie__modal.is-open {
-//     opacity: 1;
-//     visibility: visible;
-// }
-//     // transform: translateX(0);
-// // }
-=======
->>>>>>> Stashed changes
