--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -45,6 +45,7 @@ transform: scale(0.2);
   border-radius: 10px;
 
   @media screen and (min-width: 768px) {
+    overflow: visible;
     height: auto;
     position: fixed;
     width: 704px;
