--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -3,23 +3,26 @@
   opacity: 1;
   visibility: visible;
 }
-.backdrop-about {
- 
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, .2);
-    z-index: 20;
-     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+body.active {
+  overflow: hidden;
+}
 
-    
+.backdrop-about {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  z-index: 20;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
   &.is-hidden {
-        opacity: 0;
-        pointer-events: none;
-transform: scale(0.2);
-    }
+    opacity: 0;
+    pointer-events: none;
+    transform: scale(0.2);
+  }
 }
 
 /* Модалка оформлення */
