--- a/src/partials/header_library.html
+++ b/src/partials/header_library.html
@@ -36,8 +36,15 @@
     </div>
 
     <ul class="add-films">
-      <li><a href="#" class="active-btn add-films-watched btn" id="btnWatched">Watched</a></li>
-      <li><a href="#" class="add-films-queue btn" id="btnQueued">queue</a></li>
+      <li>
+        <div id="btnWatched">
+        <a href="#" class="active-btn add-films-watched btn" id="btnWatched">Watched</a>
+      </div></li>
+      <li>
+        <div  id="btnQueued">
+        <a href="#" class="add-films-queue btn">queue</a>
+      </div>
+    </li>
     </ul>
 
   </div>
