--- a/src/sass/_pagination.scss
+++ b/src/sass/_pagination.scss
@@ -1,4 +1,5 @@
-.pagination {
+.pagination,
+.pagination-l {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -12,7 +13,9 @@
 }
 
 .btn-left,
-.btn-right {
+.btn-right,
+.btn-left-l,
+.btn-right-l {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -35,7 +38,8 @@
   height: 40px;
 }
 
-.current {
+.current,
+.current-l {
   color: $white-color;
   background-color: $red-color;
   border-radius: 5px;
@@ -44,7 +48,11 @@
 .first-left,
 .first-right,
 .second-left,
-.second-right {
+.second-right,
+.first-left-l,
+.first-right-l,
+.second-left-l,
+.second-right-l {
   color: $black-color;
   background-color: $white-color;
   cursor: pointer;
