--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -12,7 +12,7 @@
     height: 100%;
     background-color: rgba(0, 0, 0, .2);
     z-index: 20;
-     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+     transition: opacity 5ms cubic-bezier(0.4, 0, 0.2, 1), transform 5ms cubic-bezier(0.4, 0, 0.2, 1);
 
     
   &.is-hidden {
@@ -31,7 +31,7 @@ transform: scale(0.2);
   min-width: 280px;
   height: 95%;
   padding: 40px 15px;
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
