add & fix photos

--- a/src/sass/_modal_students.scss
+++ b/src/sass/_modal_students.scss
@@ -192,7 +192,7 @@ body.show-modal {
 }
 
 .dev__img {
-  height: 280px;
+  // height: 280px;
   width: 100%;
   box-shadow: 0 5px 20px 3px rgba(0, 0, 0, 0.6);
 }
