--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,12 +1,7 @@
 .header {
   margin: 20px;
   text-align: center;
-  background-image: linear-gradient(
-      180deg,
-      rgba(0, 0, 0, 0) 0%,
-      rgba(0, 0, 0, 0.4) 65.37%
-    ),
-    url('/src/images/background_phone.jpg');
+    background-image: url('/src/images/background_phone.jpg');
   background-repeat: no-repeat;
   border-radius: 10px;
 
@@ -14,24 +9,14 @@
   background-size: cover;
 
   @media screen and (min-width: 768px) {
-    background-image: linear-gradient(
-        273.67deg,
-        rgba(0, 0, 0, 0.49) -2.09%,
-        rgba(0, 0, 0, 0) 99.83%
-      ),
-      url('/src/images/background_tablet.jpg');
+     background-image: url('/src/images/background_tablet.jpg');
     border-radius: 15px;
 
     margin: 32px;
   }
 
   @media screen and (min-width: 1280px) {
-    background-image: linear-gradient(
-        273.67deg,
-        rgba(0, 0, 0, 0.49) -2.09%,
-        rgba(0, 0, 0, 0) 99.83%
-      ),
-      url('/src/images/background_desktop.jpg');
+     background-image: url('/src/images/background_desktop.jpg');
     border-radius: 15px;
 
     margin: 12px 32px 52px 32px;
@@ -41,9 +26,11 @@
     text-decoration: none;
   }
 }
+
 .header_search-input::placeholder {
   color: #000000;
 }
+
 .header-container {
   margin: 0 auto;
   padding: 14px 14px 24px 14px;
