--- a/src/partials/header_library.html
+++ b/src/partials/header_library.html
@@ -38,7 +38,7 @@
     <ul class="add-films">
       <li>
         <div id="btnWatched">
-        <a href="#" class="active-btn add-films-watched btn" id="btnWatched">Watched</a>
+        <a href="#" class="active-btn add-films-watched btn">Watched</a>
       </div></li>
       <li>
         <div  id="btnQueued">
