--- a/src/partials/watched_section_cards.html
+++ b/src/partials/watched_section_cards.html
@@ -1,5 +1,5 @@
 <section>
   <div class="container">
-    <ul class="collection"></ul>
+    <ul class="collection__library"></ul>
   </div>
 </section>
