--- a/src/sass/_cards.scss
+++ b/src/sass/_cards.scss
@@ -1,4 +1,5 @@
-.collection {
+.collection,
+.collection__library {
   @media screen and (min-width: 768px) {
     // width: 768px;
     display: flex;
@@ -62,8 +63,12 @@
   margin-bottom: 0px;
 
   @media screen and (min-width: 768px) {
+    
     // width: 336px;
     height: 455px;
+    &:hover {
+      transform:scale(102%);
+    }
   }
 
   @media screen and (min-width: 1280px) {
@@ -71,6 +76,7 @@
     width: 100%;
     height: 574px;
   }
+   
 }
 
 .card__title {
