--- a/src/partials/header_library.html
+++ b/src/partials/header_library.html
@@ -37,7 +37,7 @@
 
     <ul class="add-films">
       <li>
-        <div id="btnWatched">
+        <div id="btnWatched active-bt">
         <a href="#" class="active-btn add-films-watched btn" id="btnWatched">Watched</a>
       </div></li>
       <li>
