--- a/src/partials/header_library.html
+++ b/src/partials/header_library.html
@@ -38,13 +38,13 @@
     <ul class="add-films">
       <li>
 
-        <div id="btnWatched active-bt">
+        <div id="btnWatched active-btn">
         <a href="#" class="active-btn add-films-watched btn" id="btnWatched">Watched</a>
       </div></li>
 ==
 
              <li>
-        <div  id="btnQueued">
+        <div  id="btnQueued active-btn">
         <a href="#" class="add-films-queue btn">queue</a>
       </div>
     </li>
