--- a/src/partials/header_library.html
+++ b/src/partials/header_library.html
@@ -37,18 +37,18 @@
 
     <ul class="add-films">
       <li>
-
         <div id="btnWatched active-bt">
-        <a href="#" class="active-btn add-films-watched btn" id="btnWatched">Watched</a>
-      </div></li>
-==
+          <a href="#" class="active-btn add-films-watched btn" id="btnWatched"
+            >Watched</a
+          >
+        </div>
+      </li>
 
-             <li>
-        <div  id="btnQueued">
-        <a href="#" class="add-films-queue btn">queue</a>
-      </div>
-    </li>
+      <li>
+        <div id="btnQueued">
+          <a href="#" class="add-films-queue btn">queue</a>
+        </div>
+      </li>
     </ul>
-
   </div>
 </header>
