--- a/src/partials/header_library.html
+++ b/src/partials/header_library.html
@@ -44,7 +44,7 @@
 ==
 
              <li>
-        <div  id="btnQueued active-btn">
+        <div  id="btnQueued">
         <a href="#" class="add-films-queue btn">queue</a>
       </div>
     </li>
