--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -9,7 +9,10 @@
     </svg>
     <span class="footer__text"
       >by&nbsp;
-      <a class="footer__link footer__link--underline footer_btn" data-action="open-modal" href="#"
+      <a
+        class="footer__link footer__link--underline footer_btn"
+        data-action="open-modal"
+        href="#"
         >GoIT Students</a
       ></span
     >
