--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -8,17 +8,16 @@ body.active {
 }
 
 .backdrop-about {
- 
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, .2);
-    z-index: 20;
-     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  z-index: 20;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    
   &.is-hidden {
     opacity: 0;
     pointer-events: none;
@@ -29,8 +28,6 @@ body.active {
 /* Модалка оформлення */
 
 .movie__modal {
-  // opacity: 0;
-  // visibility: hidden;
   overflow-y: scroll;
   min-width: 280px;
   height: 95%;
