--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -2,7 +2,7 @@ $white-color: #f0f0f0;
 $black-color: #000000;
 $red-color: #b92f2c;
 
-$footer-bgr: #F7F7F7;
+$footer-bgr: #f7f7f7;
 $footer-font: #545454;
 $footer-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
