--- a/src/partials/section_cards.html
+++ b/src/partials/section_cards.html
@@ -3,3 +3,10 @@
     <ul class="collection"></ul>
   </div>
 </section>
+
+
+<div class="container"> 
+<div class=libraryWQ> 
+  <ul class="collection"></ul>
+</div> 
+</div> 
