--- a/src/partials/header_library.html
+++ b/src/partials/header_library.html
@@ -37,8 +37,8 @@
 
     <ul class="add-films">
       <li>
-        <div id="btnWatched active-bt">
-          <a href="#" class="active-btn add-films-watched btn"
+        <div id="btnWatched">
+          <a href="#" class="active-btn add-films-watched btn" 
             >Watched</a
           >
         </div>
