--- a/src/partials/pagination_library.html
+++ b/src/partials/pagination_library.html
@@ -7,8 +7,8 @@
   <li class="pagination-number second-left-l"></li>
   <li class="pagination-number first-left-l"></li>
   <li class="pagination-number current-l">1</li>
-  <li class="pagination-number first-right-l"></li>
-  <li class="pagination-number second-right-l"></li>
+  <li class="pagination-number first-right-l">2</li>
+  <li class="pagination-number second-right-l">3</li>
   <li class="btn-right-l">
     <svg width="16" height="16">
       <use href="./images/sprite.svg#arrow-rigth"></use>
