--- a/src/partials/header_library.html
+++ b/src/partials/header_library.html
@@ -12,7 +12,13 @@
     </nav>
 
     <form class="form">
-      <input class="header_search-input" placeholder="Movie search" name="search" autocomplete="off" type="text" />
+      <input
+        class="header_search-input"
+        placeholder="Movie search"
+        name="search"
+        autocomplete="off"
+        type="text"
+      />
       <button class="header_search-btn" type="submit">
         <svg class="header_search-btn_icon">
           <use href="/src/images/sprite.svg#icon-search"></use>
@@ -31,19 +37,16 @@
 
     <ul class="add-films">
       <li>
-            <div id="btnWatched" class="add-films-queue active-btn btn">
-          <a href="#"
-            >Watched</a
-          >
+        <div id="btnWatched" class="add-films-queue active-btn btn">
+          <a href="#">Watched</a>
+        </div>
+      </li>
 
-  </div>
-  </li>
-
-  <li>
-    <div id="btnQueued" class="add-films-queue btn" >
+      <li>
+        <div id="btnQueued" class="add-films-queue btn">
           <a href="#">queue</a>
         </div>
-  </li>
-  </ul>
+      </li>
+    </ul>
   </div>
 </header>
