--- a/src/partials/header_home.html
+++ b/src/partials/header_home.html
@@ -5,7 +5,7 @@
         <li class="nav-item nav-current">
           <a href="./index.html">Home</a>
         </li>
-        <li class="nav-item-long nav-second">
+        <li class="nav-item nav-second">
           <a href="./library.html">My Library</a>
         </li>
       </ul>
