--- a/src/partials/header_library.html
+++ b/src/partials/header_library.html
@@ -5,7 +5,7 @@
         <li class="nav-item nav-second">
           <a href="./index.html">Home</a>
         </li>
-        <li class="nav-item-long nav-current">
+        <li class="nav-item nav-current">
           <a href="./library.html">My Library</a>
         </li>
       </ul>
@@ -26,7 +26,7 @@
       </button>
     </form>
 
-    <div class="header-logo">
+    <div class="header-logo header-library">
       <a class="header_logo-link logo" href="/src/index.html">
         <svg class="header_logo-icon">
           <use href="/src/images/sprite.svg#icon-film"></use>
@@ -37,13 +37,13 @@
 
     <ul class="add-films">
       <li>
-        <div id="btnWatched" class="add-films-queue active-btn btn">
+        <div id="btnWatched" class="add-films-queue active-btn">
           <a href="#">Watched</a>
         </div>
       </li>
 
       <li>
-        <div id="btnQueued" class="add-films-queue btn">
+        <div id="btnQueued" class="add-films-queue">
           <a href="#">queue</a>
         </div>
       </li>
