--- a/src/sass/_cards.scss
+++ b/src/sass/_cards.scss
@@ -1,76 +1,19 @@
-.collection,
-.collection__library {
-  @media screen and (min-width: 768px) {
-    display: flex;
-    flex-wrap: wrap;
+.collection {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
 
+  @media screen and (min-width: 768px) {
     gap: 32px;
   }
 
   @media screen and (min-width: 1280px) {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 16px;
+    gap: 32px 16px;
   }
 }
-.library__container {
-  list-style-type: none;
 
-  @media screen and (min-width: 768px) {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 32px;
-  }
-
-  @media screen and (min-width: 1280px) {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 16px;
-  }
-}
 .card {
-  margin: 0;
-  width: auto;
-
-  @media screen and (max-width: 767px) {
-    &:not(:last-child) {
-      margin-bottom: 20px;
-    }
-  }
-
-  @media screen and (min-width: 768px) {
-    width: calc((100% - 32px) / 2);
-  }
-
-  @media screen and (min-width: 1280px) {
-    width: calc((100% - 32px * 3) / 3);
-  }
-}
-
-.card__img {
-  display: block;
-  width: 100%;
-  height: 402px;
-  object-fit: cover;
-  border-radius: 5px;
-  margin-bottom: 0px;
-
-  @media screen and (min-width: 768px) {
-    height: 455px;
-    &:hover {
-      transform: scale(102%);
-    }
-  }
-
-  @media screen and (min-width: 1280px) {
-    object-fit: cover;
-    width: 100%;
-    height: 574px;
-  }
-}
-
-.card__title {
-  padding-top: 10px;
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 500;
@@ -78,19 +21,48 @@
   line-height: 1.16;
   text-transform: uppercase;
   color: #000000;
+  width: 280px;
 
   @media screen and (min-width: 768px) {
-    padding-top: 8px;
+    width: 336px;
   }
-
   @media screen and (min-width: 1280px) {
-    padding-top: 12px;
+    width: 394px;
     font-weight: 500;
     font-size: 20px;
     line-height: 24px;
   }
 }
 
+.card__img {
+  width: 280px;
+  height: 402px;
+  border-radius: 5px;
+
+  @media screen and (min-width: 768px) {
+    width: 336px;
+    height: 455px;
+    &:hover {
+      transform: scale(102%);
+    }
+  }
+
+  @media screen and (min-width: 1280px) {
+    width: 394px;
+    height: 574px;
+  }
+}
+.card__title {
+  margin-top: 10px;
+
+  @media screen and (min-width: 768px) {
+    margin-top: 8px;
+  }
+
+  @media screen and (min-width: 1280px) {
+    margin-top: 12px;
+  }
+}
 .card__info {
   font-family: 'Roboto';
   font-style: normal;
@@ -104,11 +76,11 @@
     font-size: 20px;
     line-height: 24px;
     color: blue($color: #000000);
-    padding-bottom: 16px;
   }
 }
 
 .card__genres {
   border-right: 2px solid #b92f2c;
+  margin-left: 3px;
   margin-right: 3px;
 }
