--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,4 +1,5 @@
 .header {
+  min-width: 280px;
   margin: 20px;
   text-align: center;
   background-image: url('/src/images/background_phone.jpg');
@@ -11,24 +12,16 @@
   @media screen and (min-width: 768px) {
     background-image: url('/src/images/background_tablet.jpg');
     border-radius: 15px;
-
     margin: 32px;
   }
 
   @media screen and (min-width: 1280px) {
     background-image: url('/src/images/background_desktop.jpg');
-    border-radius: 15px;
-
-    margin: 12px 32px 52px 32px;
   }
 
   & a {
     text-decoration: none;
   }
-}
-
-.header_search-input::placeholder {
-  color: #000000;
 }
 
 .header-container {
@@ -44,7 +37,7 @@
   }
 
   @media screen and (min-width: 1280px) {
-    width: 1216px;
+    width: 1280px;
     height: 316px;
     padding: 16px 32px 32px 32px;
   }
@@ -52,36 +45,28 @@
 
 .form {
   position: relative;
-
-  width: 100%;
-
-  height: 34px;
-
-  background: $white-color;
-  border-radius: 100px;
-
   @media screen and (min-width: 768px) {
     position: absolute;
     content: '';
-
-    width: 165px;
-    height: 38px;
     left: 16px;
     top: 16px;
   }
 
   @media screen and (min-width: 1280px) {
-    width: 187px;
-    height: 42px;
     left: 32px;
     top: 16px;
   }
 }
 
+.header_search-input::placeholder {
+  color: #000000;
+}
+
 .header_search-input {
-  background-color: transparent;
-  width: 252px;
-  height: 100%;
+  background-color: $white-color;
+  border-radius: 100px;
+  width: 100%;
+  height: 34px;
   padding-left: 15px;
 
   font-family: 'Roboto';
@@ -104,15 +89,15 @@
   @media screen and (min-width: 768px) {
     font-size: 14px;
     line-height: 1.14;
-    width: 90px;
-    padding-left: 0;
+    width: 165px;
+    height: 38px;
   }
 
   @media screen and (min-width: 1280px) {
     font-size: 14px;
     line-height: 1.14;
-    width: 120px;
-    padding-left: 0;
+    width: 187px;
+    height: 42px;
   }
 }
 
@@ -197,7 +182,6 @@
 
   @media screen and (min-width: 1280px) {
     left: 227px;
-
     padding: 0px;
     gap: 8px;
   }
@@ -209,7 +193,6 @@
   padding: 10px 26px;
   gap: 10px;
 
-  width: 87px;
   height: 34px;
 
   font-family: 'Roboto';
@@ -226,51 +209,15 @@
 
   @media screen and (min-width: 768px) {
     padding: 12px 24px;
-    width: 83px;
     height: 38px;
   }
 
   @media screen and (min-width: 1280px) {
     padding: 14px 32px;
-
-    width: 99px;
     height: 42px;
   }
 }
 
-.nav-item-long {
-  padding: 10px 22px;
-
-  width: 113px;
-  height: 34px;
-
-  border-radius: 100px;
-
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 1.17;
-
-  display: flex;
-  align-items: center;
-  text-align: center;
-  text-transform: uppercase;
-
-  @media screen and (min-width: 768px) {
-    padding: 12px 20px;
-
-    width: 109px;
-    height: 38px;
-  }
-
-  @media screen and (min-width: 1280px) {
-    padding: 14px 24px;
-
-    width: 117px;
-    height: 42px;
-  }
-}
 .nav-current > a {
   color: $white-color;
 }
@@ -303,48 +250,8 @@
   }
 }
 
-.add-films-watched {
-  padding: 10px 23px;
-  // width: 102px;
-  height: 34px;
-
-  display: flex;
-  align-items: center;
-  text-align: center;
-  text-transform: uppercase;
-
-  font-family: 'Roboto';
-  font-style: normal;
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 1.17;
-
-  background: $red-color;
-  box-shadow: 0px 0px 7px rgba(27, 27, 27, 0.15);
-  border-radius: 100px;
-  color: $white-color;
-
-  &:hover,
-  &:active {
-    background-color: $white-color;
-    color: $red-color;
-  }
-
-  @media screen and (min-width: 768px) {
-    padding: 12px 23px;
-    height: 38px;
-  }
-
-  @media screen and (min-width: 1280px) {
-    padding: 14px 32px;
-    width: 120px;
-    height: 42px;
-  }
-}
-
 .add-films-queue {
   padding: 10px 24px;
-  // width: 86px;
   height: 34px;
 
   display: flex;
@@ -360,13 +267,8 @@
   font-weight: 500;
   font-size: 12px;
   line-height: 1.17;
-
-  color: $red-color;
-
-  &:hover,
-  &:active {
-    background-color: $red-color;
-    color: $white-color;
+  > a {
+    color: $red-color;
   }
 
   @media screen and (min-width: 768px) {
@@ -382,11 +284,13 @@
 
 .active-btn {
   background-color: $red-color;
-  color: $white-color;
+  > a {
+    color: $white-color;
+  }
 }
 
 .header-logo {
-  margin-top: 258px;
+  margin-top: 312px;
 
   @media screen and (min-width: 768px) {
     position: absolute;
@@ -402,8 +306,13 @@
   }
 }
 
+.header-library {
+  margin-top: 258px;
+}
+
 .header_logo-link {
   align-items: center;
+  justify-content: center;
 }
 
 .header_logo-icon {
@@ -471,6 +380,6 @@
   }
 }
 
-.hidden{
-  visibility:hidden
+.hidden {
+  visibility: hidden;
 }
