--- a/src/partials/modal_students.html
+++ b/src/partials/modal_students.html
@@ -1,7 +1,7 @@
 <div class="team__backdrop js-team-backdrop">
   <div class="team__modal">
     <h2 class="team__title">
-      <span class="team__text">United_Juniors</span>
+      <span class="team__text">United Juniors</span>
     </h2>
     <button
       type="button"
